--- a/css/global.css
+++ b/css/global.css
@@ -1,3 +1,4 @@
+
     @charset "UTF-8";
     /*
 	順序上位於 base/variable 之前，因此不能使用任何 base/variable 變數 
@@ -987,8 +988,8 @@
     
     @font-face {
         font-family: 'icomoon';
-        src: url("../images/icon-font/icomoon.eot?59oic8");
-        src: url("../images/icon-font/icomoon.eot?#iefix59oic8") format("embedded-opentype"), url("../images/icon-font/icomoon.ttf?59oic8") format("truetype"), url("../images/icon-font/icomoon.woff?59oic8") format("woff"), url("../images/icon-font/icomoon.svg?59oic8#icomoon") format("svg");
+        src: url("./images/icon-font/icomoon.eot?59oic8");
+        src: url("./images/icon-font/icomoon.eot?#iefix59oic8") format("embedded-opentype"), url("./images/icon-font/icomoon.ttf?59oic8") format("truetype"), url("./images/icon-font/icomoon.woff?59oic8") format("woff"), url("./images/icon-font/icomoon.svg?59oic8#icomoon") format("svg");
         font-weight: normal;
         font-style: normal;
     }
@@ -1196,7 +1197,7 @@
     .icon-pic-user-tool-bopomofo,
     .icon-pic-user-tool-metadata,
     .icon-pic-user-tool-print {
-        background-image: url('../images/icon-pic-sc6d4bf00d5.png');
+        background-image: url('./images/icon-pic-sc6d4bf00d5.png');
         background-repeat: no-repeat;
     }
     /* line 84, ../../../fire.app.windows.1.14/fire.app/lib/ruby/compass_1.0/compass-core-1.0.3/stylesheets/compass/utilities/sprites/_base.scss */
@@ -2474,7 +2475,7 @@
     /* line 15, ../sass/_base-mobile.scss */
     
     .base-mobile.is-active>.in>.hd a {
-        background-image: url('../images/icon-pic/icon-mobile_btn_close.png?1543302465');
+        background-image: url('./images/icon-pic/icon-mobile_btn_close.png?1543302465');
         left: 0;
     }
     /* line 19, ../sass/_base-mobile.scss */
@@ -2523,7 +2524,7 @@
         width: 48px;
         height: 48px;
         font-size: 1.4em;
-        background-image: url('../images/icon-mobile_btn_menu.png?1543302465');
+        background-image: url('./images/icon-mobile_btn_menu.png?1543302465');
         background-repeat: no-repeat;
         background-position: center;
         border-radius: 50%;
@@ -3140,7 +3141,7 @@
         display: block;
         width: 40px;
         height: 40px;
-        background-image: url('../images/icon-search.png?1543302465');
+        background-image: url('./images/icon-search.png?1543302465');
         transition: 150ms;
     }
     /* line 226, ../sass/_base-layout.scss */
@@ -3310,7 +3311,7 @@
     /* line 434, ../sass/_base-layout.scss */
     
     .comingsoon>.in>.ct>.in .group-list.major-slider {
-        /* background-image: url("../images/bg.jpg"); */
+        /* background-image: url("./images/bg.jpg"); */
         height: 100vh;
         background-size: cover;
         background-position: top left;
@@ -4350,7 +4351,7 @@
     .group-list.marquee-nav>.bg-drop-layout>.in>.ft li.prev a,
     .group-list.marquee-nav>.in>.ft li.prev a {
         left: 0;
-        background-image: url('../images/icon-pic/away-b-left.png?1543302465');
+        background-image: url('./images/icon-pic/away-b-left.png?1543302465');
         background-repeat: no-repeat;
         background-position: center;
     }
@@ -4359,7 +4360,7 @@
     .group-list.marquee-nav>.bg-drop-layout>.in>.ft li.next a,
     .group-list.marquee-nav>.in>.ft li.next a {
         right: 0;
-        background-image: url('../images/icon-pic/away-b-right.png?1543302465');
+        background-image: url('./images/icon-pic/away-b-right.png?1543302465');
         background-repeat: no-repeat;
         background-position: center;
     }
@@ -4435,7 +4436,7 @@
     /* line 62, ../sass/_simple-text_major-logo.scss */
     
     .simple-text.major-logo .ct a {
-        background-image: url('../images/major_logo.png?1547524154');
+        background-image: url('./images/major_logo.png?1547524154');
         background-repeat: no-repeat;
         background-position: center;
         display: block;
@@ -4483,7 +4484,7 @@
     /* line 46, ../sass/_simple-text_minor-logo.scss */
     
     .simple-text.minor-logo .ct a {
-        background-image: url('../images/minor_logo.png?1543302465');
+        background-image: url('./images/minor_logo.png?1543302465');
         background-repeat: no-repeat;
         background-position: center;
         display: block;
@@ -4686,7 +4687,7 @@
     /* line 16, ../sass/_list-text_link.scss */
     
     .base-mobile .list-text.link.is-open .hd a:after {
-        background-image: url('../images/icon-pic/away-b-bottom.png?1543302465');
+        background-image: url('./images/icon-pic/away-b-bottom.png?1543302465');
         background-repeat: no-repeat;
         background-position: center;
     }
@@ -4996,7 +4997,7 @@
     /* line 173, ../sass/_list-text_share.scss */
     
     .base-mobile .list-text.share .ct li.facebook a {
-        background-image: url('../images/icon-pic/share-w-facebook.png?1543302465');
+        background-image: url('./images/icon-pic/share-w-facebook.png?1543302465');
         background-repeat: no-repeat;
         background-position: center;
         height: 40px;
@@ -5010,7 +5011,7 @@
     /* line 173, ../sass/_list-text_share.scss */
     
     .base-mobile .list-text.share .ct li.google a {
-        background-image: url('../images/icon-pic/share-w-google.png?1543302465');
+        background-image: url('./images/icon-pic/share-w-google.png?1543302465');
         background-repeat: no-repeat;
         background-position: center;
         height: 40px;
@@ -5024,7 +5025,7 @@
     /* line 173, ../sass/_list-text_share.scss */
     
     .base-mobile .list-text.share .ct li.twitter a {
-        background-image: url('../images/icon-pic/share-w-twitter.png?1543302465');
+        background-image: url('./images/icon-pic/share-w-twitter.png?1543302465');
         background-repeat: no-repeat;
         background-position: center;
         height: 40px;
@@ -5038,7 +5039,7 @@
     /* line 173, ../sass/_list-text_share.scss */
     
     .base-mobile .list-text.share .ct li.plurk a {
-        background-image: url('../images/icon-pic/share-w-plurk.png?1543302465');
+        background-image: url('./images/icon-pic/share-w-plurk.png?1543302465');
         background-repeat: no-repeat;
         background-position: center;
         height: 40px;
@@ -5052,7 +5053,7 @@
     /* line 173, ../sass/_list-text_share.scss */
     
     .base-mobile .list-text.share .ct li.line a {
-        background-image: url('../images/icon-pic/share-w-line.png?1543302465');
+        background-image: url('./images/icon-pic/share-w-line.png?1543302465');
         background-repeat: no-repeat;
         background-position: center;
         height: 40px;
@@ -5066,7 +5067,7 @@
     /* line 173, ../sass/_list-text_share.scss */
     
     .base-mobile .list-text.share .ct li.email a {
-        background-image: url('../images/icon-pic/share-w-email.png?1543302465');
+        background-image: url('./images/icon-pic/share-w-email.png?1543302465');
         background-repeat: no-repeat;
         background-position: center;
         height: 40px;
@@ -5107,12 +5108,12 @@
     /* line 25, ../sass/_list-text_font-size.scss */
     
     .font-size-large .list-text.font-size .hd a {
-        background-image: url('../images/icon-pic/font-large.png?1543302465');
+        background-image: url('./images/icon-pic/font-large.png?1543302465');
     }
     /* line 35, ../sass/_list-text_font-size.scss */
     
     .font-size-small .list-text.font-size .hd a {
-        background-image: url('../images/icon-pic/font-smail.png?1543302465');
+        background-image: url('./images/icon-pic/font-smail.png?1543302465');
     }
     /* line 45, ../sass/_list-text_font-size.scss */
     
@@ -5139,7 +5140,7 @@
         width: 40px;
         height: 40px;
         background-color: #14165e;
-        background-image: url('../images/icon-pic/font-medium.png?1543302465');
+        background-image: url('./images/icon-pic/font-medium.png?1543302465');
         transition: 150ms;
     }
     /* line 85, ../sass/_list-text_font-size.scss */
@@ -5187,17 +5188,17 @@
     /* line 135, ../sass/_list-text_font-size.scss */
     
     .list-text.font-size .ct li.small a {
-        background-image: url('../images/icon-pic/font-smail.png?1543302465');
+        background-image: url('./images/icon-pic/font-smail.png?1543302465');
     }
     /* line 142, ../sass/_list-text_font-size.scss */
     
     .list-text.font-size .ct li.medium a {
-        background-image: url('../images/icon-pic/font-medium.png?1543302465');
+        background-image: url('./images/icon-pic/font-medium.png?1543302465');
     }
     /* line 149, ../sass/_list-text_font-size.scss */
     
     .list-text.font-size .ct li.large a {
-        background-image: url('../images/icon-pic/font-large.png?1543302465');
+        background-image: url('./images/icon-pic/font-large.png?1543302465');
     }
     /* line 154, ../sass/_list-text_font-size.scss */
     
@@ -5220,7 +5221,7 @@
     /* line 16, ../sass/_list-text_hot-key-word.scss */
     
     .base-mobile .list-text.hot-key-word.is-open .hd a:after {
-        background-image: url('../images/icon-pic/away-b-bottom.png?1543302465');
+        background-image: url('./images/icon-pic/away-b-bottom.png?1543302465');
         background-repeat: no-repeat;
         background-position: center;
     }
@@ -5286,7 +5287,7 @@
     /* line 16, ../sass/_list-text_nav.scss */
     
     .base-mobile .list-text.nav.is-open .hd a:after {
-        background-image: url('../images/icon-pic/away-b-bottom.png?1543302465');
+        background-image: url('./images/icon-pic/away-b-bottom.png?1543302465');
         background-repeat: no-repeat;
         background-position: center;
     }
@@ -5626,22 +5627,22 @@
     /* line 53, ../sass/_list-text_open-data.scss */
     
     .list-text.open-data .ct li.rss a {
-        background-image: url('../images/icon-pic/opn-data-rss.png?1543302465');
+        background-image: url('./images/icon-pic/opn-data-rss.png?1543302465');
     }
     /* line 60, ../sass/_list-text_open-data.scss */
     
     .list-text.open-data .ct li.json a {
-        background-image: url('../images/icon-pic/opn-data-json.png?1543302465');
+        background-image: url('./images/icon-pic/opn-data-json.png?1543302465');
     }
     /* line 67, ../sass/_list-text_open-data.scss */
     
     .list-text.open-data .ct li.xml a {
-        background-image: url('../images/icon-pic/opn-data-xml.png?1543302465');
+        background-image: url('./images/icon-pic/opn-data-xml.png?1543302465');
     }
     /* line 74, ../sass/_list-text_open-data.scss */
     
     .list-text.open-data .ct li.csv a {
-        background-image: url('../images/icon-pic/opn-data-csv.png?1543302465');
+        background-image: url('./images/icon-pic/opn-data-csv.png?1543302465');
     }
     /* line 80, ../sass/_list-text_open-data.scss */
     
@@ -5695,17 +5696,17 @@
     /* line 67, ../sass/_list-text_user-tool.scss */
     
     .list-text.user-tool .ct li.bopomofo a {
-        background-image: url('../images/icon-pic/user-tool-bopomofo.png?1543302465');
+        background-image: url('./images/icon-pic/user-tool-bopomofo.png?1543302465');
     }
     /* line 81, ../sass/_list-text_user-tool.scss */
     
     .list-text.user-tool .ct li.print a {
-        background-image: url('../images/icon-pic/user-tool-print.png?1543302465');
+        background-image: url('./images/icon-pic/user-tool-print.png?1543302465');
     }
     /* line 88, ../sass/_list-text_user-tool.scss */
     
     .list-text.user-tool .ct li.data a {
-        background-image: url('../images/icon-pic/user-tool-metadata.png?1543302465');
+        background-image: url('./images/icon-pic/user-tool-metadata.png?1543302465');
     }
     /* line 115, ../sass/_list-text_user-tool.scss */
     
@@ -5780,7 +5781,7 @@
         display: block;
         background-color: #ffffff;
         margin: 0 auto;
-        background-image: url(../images/icon-pic/away-b-top.png);
+        background-image: url(./images/icon-pic/away-b-top.png);
         background-repeat: no-repeat;
         background-position: center;
     }
@@ -5844,7 +5845,7 @@
     /* line 15, ../sass/_area-form_page-search.scss */
     
     .area-form.page-search.is-active .hd a {
-        background-image: url('../images/search-up.png?1543302465');
+        background-image: url('./images/search-up.png?1543302465');
     }
     /* line 20, ../sass/_area-form_page-search.scss */
     
@@ -5869,7 +5870,7 @@
         width: 38px;
         height: 22px;
         vertical-align: middle;
-        background-image: url('../images/search-down.png?1543302465');
+        background-image: url('./images/search-down.png?1543302465');
         background-repeat: no-repeat;
         background-position: center;
         border-radius: 3px;
@@ -5914,7 +5915,7 @@
     /* line 101, ../sass/_area-form_page-search.scss */
     
     .area-form.page-search .ct .fieldset span.date input {
-        background-image: url('../images/icon-pic/calendar.png');
+        background-image: url('./images/icon-pic/calendar.png');
         background-position: center right;
         background-repeat: no-repeat;
     }
@@ -5973,7 +5974,7 @@
         bottom: 0;
         width: 36px;
         background-color: #1d2088;
-        background-image: url('../images/icon-pic/icon-w-search.png?1543302465');
+        background-image: url('./images/icon-pic/icon-w-search.png?1543302465');
         background-repeat: no-repeat;
         background-position: center;
     }
@@ -6056,7 +6057,7 @@
         width: 36px;
         background-color: #1d2088;
         transition: 150ms;
-        background-image: url('../images/icon-pic/icon-w-search.png?1543302465');
+        background-image: url('./images/icon-pic/icon-w-search.png?1543302465');
         background-repeat: no-repeat;
         background-position: center;
     }
@@ -6706,7 +6707,7 @@
     .area-customize.video .ct .video {
         color: #ffffff;
         margin-bottom: 5px;
-        background-image: url('../images/icon-pic/icon-w-video.png?1543302465');
+        background-image: url('./images/icon-pic/icon-w-video.png?1543302465');
         background-repeat: no-repeat;
         background-position: center;
     }
@@ -6856,4 +6857,3 @@
         margin-right: 3px;
     }
     /*# sourceMappingURL=global.css.map */
-
